Add RegisterPage, Veryfymail + call API

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
-    "@mui/material": "^7.0.1",
+    "@mui/material": "^6.4.0",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
+    "mui-tel-input": "^8.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
