--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_GOOGLE_CLIENT_ID="776464340329-gimrbbq5n4j5u9ohs1b1p2qqvnnge0a8.apps.googleusercontent.com"
-VITE_API_BASE_URL="http://backend:3000"
+VITE_API_BASE_URL="http://localhost:3000"
